# cvutil

./: .gitignore  CMakeLists.txt  README.md  bld.bat  build.sh  changelog.txt  cvutil.sln  cvutilConfig.cmake.in  meta.yaml
CMake/: PackageLinux.cmake  copy_runtime_dependencies.cmake  find_runtime_deps.cmake
PluginManager/: CMakeLists.txt  PluginManager.cpp  PluginManager.rc  PluginManager.vcxproj  PluginManager.vcxproj.filters  resource.h
PluginManager/PluginUI/: ParameterListWidget.cpp  ParameterListWidget.h  moc_ParameterListWidget.cpp  moc_qxtspanslider.cpp  moc_qxtspanslider_p.cpp  qxtspanslider.cpp  qxtspanslider.h  qxtspanslider_p.h
PluginManager/include/: PluginInterfaces.h  PluginManager.h
RoiManager/: CMakeLists.txt  RoiManager.cpp  RoiManager.rc  RoiManager.vcxproj  RoiManager.vcxproj.filters  moc_RoiManager.cpp  resource.h
RoiManager/include/: RoiManager.h
cvutil/: CMakeLists.txt  Profiler.cpp  README.md  changelog.txt  cvutil.h  cvutil.rc  cvutil.vcxproj  cvutil.vcxproj.filters  cvutil_bwdist.cpp  cvutil_bwdist.h  cvutil_bwskel.cpp  cvutil_bwskel.h  cvutil_bwthin.cpp  cvutil_bwthin.h  cvutil_core.cpp  cvutil_core.h  cvutil_figure.cpp  cvutil_figure.h  cvutil_linesim.cpp  cvutil_linesim.h  cvutil_matlab_interface.cpp  cvutil_matlab_interface.h  cvutil_templates.h  cvutil_types.h  cvutil_videowriter.cpp  cvutil_videowriter.h  demo.h  figure.h  main.cpp  main.h  profiler.h  qrc_resources.cpp  resource.h  resources.qrc  stdproto.h  video.h
cvutil/MainWindow/: BatchProcessor.cpp  BatchProcessor.h  FeatureExtractorThread.cpp  FeatureExtractorThread.h  GraphicsScene.cpp  GraphicsScene.h  InteractiveExtractorThread.cpp  InteractiveExtractorThread.h  MainWindow.cpp  MainWindow.h  MaterialStyle.cpp  MaterialStyle.h  helper_functions.cpp  helper_functions.h  logger.cpp  logger.h  moc_BatchProcessor.cpp  moc_GraphicsScene.cpp  moc_InteractiveExtractorThread.cpp  moc_MainWindow.cpp
debian/: control.in  copyright
